Main areas for the project, navBar topBar content

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title></title>
     <link href="style.css" rel="stylesheet" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="navBar"></div>
+      <div class="topBar"></div>
+      <div class="content"></div>
+    </div>
+  </body>
   <!-- <script src=""></script> -->
 </html>
