Added the navBar div, img and p

--- a/index.html
+++ b/index.html
@@ -8,10 +8,50 @@
   </head>
   <body>
     <div class="container">
-      <div class="navBar"></div>
+      <div class="navBar">
+        <div class="titleBar">
+          <img src="img/view-dashboard.svg" alt="Dashboard image" />
+          <p>Dashboard</p>
+        </div>
+        <div class="navBar home">
+          <img src="img/home.svg" alt="home image" />
+          <p>Home</p>
+        </div>
+        <div class="navBar profile">
+          <img src="img/card-account-details-outline.svg" alt="profile icon" />
+          <p>Profile</p>
+        </div>
+        <div class="navBar messages">
+          <img src="img/message.svg" alt="message icon" />
+          <p>Messages</p>
+        </div>
+        <div class="navBar history">
+          <img src="img/clock-time-three-outline.svg" alt="history icon" />
+          <p>History</p>
+        </div>
+        <div class="navBar tasks">
+          <img src="img/file-document-multiple-outline.svg" alt="task icon" />
+          <p>Tasks</p>
+        </div>
+        <div class="navBar communities">
+          <img src="img/account-group-outline.svg" alt="communities icon" />
+          <p>Communities</p>
+        </div>
+        <div class="navBar settings">
+          <img src="img/cog-outline.svg" alt="cog icon" />
+          <p>Settings</p>
+        </div>
+        <div class="navBar support">
+          <img src="img/help-box-outline.svg" alt="help icon" />
+          <p>Support</p>
+        </div>
+        <div class="navBar privacy">
+          <img src="img/shield-check-outline.svg" alt="privacy icon" />
+          <p>Privacy</p>
+        </div>
+      </div>
       <div class="topBar"></div>
       <div class="content"></div>
     </div>
   </body>
-  <!-- <script src=""></script> -->
 </html>
