Added another div to cover topBar and content

--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
           <p>Privacy</p>
         </div>
       </div>
-      <div class="topBar"></div>
-      <div class="content"></div>
+      <div class="right">
+        <div class="topBar"></div>
+        <div class="content"></div>
+      </div>
     </div>
   </body>
 </html>
