Add all the html elements for topBar lower

--- a/index.html
+++ b/index.html
@@ -52,6 +52,31 @@
       </div>
       <div class="right">
         <div class="topBar">
+          <div class="upper">
+            <img src="img/magnify.svg" alt="magnifying glass icon" />
+            <form>
+              <textarea rows="1" cols="64"></textarea>
+            </form>
+            <img src="img/bell-ring-outline.svg" alt="bell ringing icon" />
+            <img
+              class="non-inverted smaller"
+              src="img/freelancer.png"
+              alt="freelancer icon"
+            />
+            <p>Morgan Oakley</p>
+          </div>
+          <div class="lower">
+            <img
+              class="non-inverted bigger"
+              src="img/freelancer.png"
+              alt="freelancer icon"
+            />
+            <p class="greetings">Hi there,</p>
+            <p class="username">Morgan Oakley (@morgan)</p>
+            <div class="new button"><p>New</p></div>
+            <div class="upload button"><p>Upload</p></div>
+            <div class="share button"><p>Share</p></div>
+          </div>
         </div>
         <div class="content"></div>
       </div>
