Added 2 divs for content section

--- a/index.html
+++ b/index.html
@@ -78,7 +78,10 @@
             <div class="share button"><p>Share</p></div>
           </div>
         </div>
-        <div class="content"></div>
+        <div class="content">
+          <div class="content leftside"></div>
+          <div class="content rightside"></div>
+        </div>
       </div>
     </div>
   </body>
