Added the text, div and links for left side card info

--- a/index.html
+++ b/index.html
@@ -81,6 +81,121 @@
         <div class="content">
           <div class="content leftside"></div>
           <div class="content rightside"></div>
+            <div class="content leftside">
+              <div class="leftside card content11">
+                <p class="cardTitle">Super Cool Project</p>
+                <p>
+                  Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin
+                  nibh erat, id facillsis felis accumsan nec.
+                </p>
+                <div class="content11 card icons">
+                  <img
+                    src="img/star-plus-outline.svg"
+                    alt="social alternative 1"
+                  />
+                  <img
+                    src="img/eye-plus-outline.svg"
+                    alt="social alternative 2"
+                  />
+                  <img src="img/source-fork.svg" alt="social alternative 3" />
+                </div>
+              </div>
+              <div class="leftside card content12">
+                <p class="cardTitle">Less Cool Project</p>
+                <p>
+                  Nullam condimentum ipsum ut lectus vehicula consectetur.
+                  Quisque sed dolor tincidunt, consectetur sapien et, facillsis
+                  dolor. Duis sem purus, dignissim ut sapien in, varius
+                  pellentesque lacus.
+                </p>
+                <div class="content12 card icons">
+                  <img
+                    src="img/star-plus-outline.svg"
+                    alt="social alternative 1"
+                  />
+                  <img
+                    src="img/eye-plus-outline.svg"
+                    alt="social alternative 2"
+                  />
+                  <img src="img/source-fork.svg" alt="social alternative 3" />
+                </div>
+              </div>
+              <div class="leftside card content21">
+                <p class="cardTitle">Impossible App</p>
+                <p>
+                  In hac habitasse platea dictumst. Vivamus dictum rutrum arcu,
+                  a placerat velit sagittis id.
+                </p>
+                <div class="content21 card icons">
+                  <img
+                    src="img/star-plus-outline.svg"
+                    alt="social alternative 1"
+                  />
+                  <img
+                    src="img/eye-plus-outline.svg"
+                    alt="social alternative 2"
+                  />
+                  <img src="img/source-fork.svg" alt="social alternative 3" />
+                </div>
+              </div>
+              <div class="leftside card content22">
+                <p class="cardTitle">Easy Peasy App</p>
+                <p>
+                  Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim
+                  uma eget accumsan aliquam. Curabitur dignissim nisi in tortor
+                  commodo, ac bibendum magna tincidunt.
+                </p>
+                <div class="content22 card icons">
+                  <img
+                    src="img/star-plus-outline.svg"
+                    alt="social alternative 1"
+                  />
+                  <img
+                    src="img/eye-plus-outline.svg"
+                    alt="social alternative 2"
+                  />
+                  <img src="img/source-fork.svg" alt="social alternative 3" />
+                </div>
+              </div>
+              <div class="leftside card content31">
+                <p class="cardTitle">Ad Blocker</p>
+                <p>
+                  Quisque eget rutrum nis! Nam augue justo, cursus vitae metus
+                  vel, pharetra hendrerit felis. Aliquam sed malesuada eros.
+                </p>
+                <div class="content31 card icons">
+                  <img
+                    src="img/star-plus-outline.svg"
+                    alt="social alternative 1"
+                  />
+                  <img
+                    src="img/eye-plus-outline.svg"
+                    alt="social alternative 2"
+                  />
+                  <img src="img/source-fork.svg" alt="social alternative 3" />
+                </div>
+              </div>
+              <div class="leftside card content32">
+                <p class="cardTitle">Money Maker</p>
+                <p>
+                  Praesent convallis, libero quis congue elementum, nunc ante
+                  faucibus sapien, ac scelerisque tortor purus sit amet ex.
+                  Pellentesque mollis nec sem vel allquam.
+                </p>
+                <div class="content32 card icons">
+                  <img
+                    src="img/star-plus-outline.svg"
+                    alt="social alternative 1"
+                  />
+                  <img
+                    src="img/eye-plus-outline.svg"
+                    alt="social alternative 2"
+                  />
+                  <img src="img/source-fork.svg" alt="social alternative 3" />
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
