Added right side text, div and links

--- a/index.html
+++ b/index.html
@@ -196,6 +196,52 @@
               </div>
             </div>
           </div>
+          <div class="content rightside">
+            <p>Announcements</p>
+            <div class="rightside announcements">
+              <div class="announcements maintenance">
+                <p>Site Maintenance</p>
+                <p>
+                  Vestibulum condimentum tellus lacus, in accumsan elit maximus
+                  ac. Donec hendrerit sodales congue...
+                </p>
+              </div>
+              <div class="announcements community">
+                <p>Community Share Day</p>
+                <p>
+                  Nam vel lectus tincidunt, rutrum nulia eu, ornare libero.
+                  Aliquam dictum accumsan porttitor...
+                </p>
+              </div>
+              <div class="announcements privacy">
+                <p>Updated Privacy Policy</p>
+                <p>
+                  Phasellus efficitur nisi eget elit consectetur, eget
+                  condimentum ante auctor. Cras fringilla sagittis sem in
+                  mattis...
+                </p>
+              </div>
+            </div>
+            <p>Trending</p>
+            <div class="trending group">
+              <div class="trending row1">
+                <p>@tegan</p>
+                <p>World Peace Builder</p>
+              </div>
+              <div class="trending row2">
+                <p>@morgan</p>
+                <p>Super Cool Project</p>
+              </div>
+              <div class="trending row3">
+                <p>@kendall</p>
+                <p>Life Changing App</p>
+              </div>
+              <div class="trending row4">
+                <p>@alex</p>
+                <p>No Traffic Maker</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
