Added another div to cover the left side and bring title outside

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
           </div>
         </div>
         <div class="content">
-          <div class="content leftside"></div>
-          <div class="content rightside"></div>
+          <div class="content projectList">
+            <p class="leftside title">Your Projects</p>
             <div class="content leftside">
               <div class="leftside card content11">
                 <p class="cardTitle">Super Cool Project</p>
