Added class to titles on the rightside, consistent styling

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             </div>
           </div>
           <div class="content rightside">
-            <p>Announcements</p>
+            <p class="rightside title">Announcements</p>
             <div class="rightside announcements">
               <div class="announcements maintenance">
                 <p>Site Maintenance</p>
@@ -222,7 +222,7 @@
                 </p>
               </div>
             </div>
-            <p>Trending</p>
+            <p class="rightside title">Trending</p>
             <div class="trending group">
               <div class="trending row1">
                 <p>@tegan</p>
