Added class names for subheadings, style them as a group

--- a/index.html
+++ b/index.html
@@ -200,21 +200,21 @@
             <p class="rightside title">Announcements</p>
             <div class="rightside announcements">
               <div class="announcements maintenance">
-                <p>Site Maintenance</p>
+                <p class="rightside subheading">Site Maintenance</p>
                 <p>
                   Vestibulum condimentum tellus lacus, in accumsan elit maximus
                   ac. Donec hendrerit sodales congue...
                 </p>
               </div>
               <div class="announcements community">
-                <p>Community Share Day</p>
+                <p class="rightside subheading">Community Share Day</p>
                 <p>
                   Nam vel lectus tincidunt, rutrum nulia eu, ornare libero.
                   Aliquam dictum accumsan porttitor...
                 </p>
               </div>
               <div class="announcements privacy">
-                <p>Updated Privacy Policy</p>
+                <p class="rightside subheading">Updated Privacy Policy</p>
                 <p>
                   Phasellus efficitur nisi eget elit consectetur, eget
                   condimentum ante auctor. Cras fringilla sagittis sem in
