Added an id to 'Trending' for individual styling

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 </p>
               </div>
             </div>
-            <p class="rightside title">Trending</p>
+            <p class="rightside title" id="titleTrending">Trending</p>
             <div class="trending group">
               <div class="trending row1">
                 <p>@tegan</p>
