Added the separator as per guideline

--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
                   ac. Donec hendrerit sodales congue...
                 </p>
               </div>
+              <hr class="separator" />
               <div class="announcements community">
                 <p class="rightside subheading">Community Share Day</p>
                 <p>
@@ -213,6 +214,7 @@
                   Aliquam dictum accumsan porttitor...
                 </p>
               </div>
+              <hr class="separator" />
               <div class="announcements privacy">
                 <p class="rightside subheading">Updated Privacy Policy</p>
                 <p>
