Added the img/icon for each user

--- a/index.html
+++ b/index.html
@@ -229,18 +229,22 @@
               <div class="trending row1">
                 <p>@tegan</p>
                 <p>World Peace Builder</p>
+                <img src="img/dog.png" alt="dog icon" />
               </div>
               <div class="trending row2">
                 <p>@morgan</p>
                 <p>Super Cool Project</p>
+                <img src="img/freelancer.png" alt="freelancer icon" />
               </div>
               <div class="trending row3">
                 <p>@kendall</p>
                 <p>Life Changing App</p>
+                <img src="img/hoodie.png" alt="man in hoodie icon" />
               </div>
               <div class="trending row4">
                 <p>@alex</p>
                 <p>No Traffic Maker</p>
+                <img src="img/penguin.png" alt="penguin icon" />
               </div>
             </div>
           </div>
