Added additional class names for ease in styling

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
           </div>
           <div class="content rightside">
             <p class="rightside title">Announcements</p>
-            <div class="rightside announcements">
+            <div class="rightside announcements group">
               <div class="announcements maintenance">
                 <p class="rightside subheading">Site Maintenance</p>
                 <p>
@@ -228,6 +228,7 @@
             <div class="trending group">
               <div class="trending row1">
                 <p>@tegan</p>
+            <div class="rightside trending group">
                 <p>World Peace Builder</p>
                 <img src="img/dog.png" alt="dog icon" />
               </div>
