Added class names to each user's handle and name, styling purposes

--- a/index.html
+++ b/index.html
@@ -225,25 +225,24 @@
               </div>
             </div>
             <p class="rightside title" id="titleTrending">Trending</p>
-            <div class="trending group">
-              <div class="trending row1">
-                <p>@tegan</p>
             <div class="rightside trending group">
+              <div class="trending userRow row1">
+                <p class="handle">@tegan</p>
                 <p>World Peace Builder</p>
                 <img src="img/dog.png" alt="dog icon" />
               </div>
-              <div class="trending row2">
-                <p>@morgan</p>
+              <div class="trending userRow row2">
+                <p class="handle">@morgan</p>
                 <p>Super Cool Project</p>
                 <img src="img/freelancer.png" alt="freelancer icon" />
               </div>
-              <div class="trending row3">
-                <p>@kendall</p>
+              <div class="trending userRow row3">
+                <p class="handle">@kendall</p>
                 <p>Life Changing App</p>
                 <img src="img/hoodie.png" alt="man in hoodie icon" />
               </div>
-              <div class="trending row4">
-                <p>@alex</p>
+              <div class="trending userRow row4">
+                <p class="handle">@alex</p>
                 <p>No Traffic Maker</p>
                 <img src="img/penguin.png" alt="penguin icon" />
               </div>
